--- a/dn/templates/profile.html
+++ b/dn/templates/profile.html
@@ -1,11 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<style>
-.carousel-item {
-  border: none;
-}
-</style>
 <br>
 <div class="container">
   <div class="row justify-content-md-center">
@@ -13,15 +8,33 @@
         <div class="card rounded" style="width:51rem;">
             <div>
                 <table class="table table-sm table-striped table-hover">
-                    <tbody>
+                    <tbody hx-confirm="Are you sure?" hx-target="closest tr" hx-swap="outerHTML swap:1s">
                         <tr>
                             <td width="21%">
                                 user: {{ pk}}
                             </td>
-                            <td></td>
                         </tr>
+                    {% for resource in resources %}
+                        <tr>
+                            <td width="21%" style="word-break: break-all;">
+                               {{ resource.resource }}
+                            </td>
+                            <td style="word-break: break-all;">{{ resource.created_at }}</td>
+
+                            <td style="width: 5%">
+                                <a data-toggle="tooltip" title="delete" hx-delete="{% url 'resource_delete' resource.pk %}">
+                                <button type="button" class="btn btn-danger">delete</button>
+                                </a>
+                            </td>
+
+                        </tr>
+                    {% endfor %}
                     </tbody>
                 </table>
+
+                <a class="btn btn-outline-success" data-toggle="tooltip" data-bs-placement="bottom" title="provision" href="{% url 'resource_create' %}" role="button">
+                add resource</a>
+
             </div>
         </div>
     </div>
