--- a/dn/templates/base.html
+++ b/dn/templates/base.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load i18n %}
 {% load crispy_forms_tags %}
+{% load notifications_tags %}
 {% load widget_tweaks %}
 {% load i18n %}
 {% load account socialaccount %}
@@ -21,6 +22,8 @@
         {% endblock title %}
     </title>
     {% block css %}
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!-- Bootstrap 5.2 CSS JavaScript Bundle with Popper -->
