--- a/dn/templates/navbar.html
+++ b/dn/templates/navbar.html
@@ -14,7 +14,7 @@
                     </li>
                 </ul>
             </div>
-            {% comment %} <div> {% include 'snippets/notify.html' %} </div> {% endcomment %}
+            <div> {% include 'snippets/notify.html' %} </div>
             {% else %}
             <a class="navbar-brand" href="{% url 'welcome' %}"><strong>ambig</strong></a>
             {% endif %}
