--- a/dn/templates/notifications.html
+++ b/dn/templates/notifications.html
@@ -13,14 +13,29 @@
             <tbody>
             <h1>Unread Notifications</h1>
             {% if notifications %}
-                <ul>
-                    {% for notification in notifications %}
-                        <li>
-                            {{ notification.actor }} {{ notification.verb }}
-                            <a href="{{ notification.target_url }}">{{ notification.target }}</a>
-                        </li>
+                    {% comment %} {% for notification in notifications %} {% endcomment %}
+                        {% comment %} {{ notification.actor }} {{ notification.verb }}
+                        {{ notification.timestamp }} {% endcomment %}
+
+                    {% for n in notifications %}
+                        {% with notification_id=n.id %}
+                        <tr id="notification_{{ n.id }}">
+
+                            <td width="11%" style="word-break: break-all; padding-left: 10px;">{{ n.actor }}</td>
+                            <td width="5%">
+
+                            <td width="71%" style="word-break: break-all; padding-left: 10px;">
+                               {{ n.verb }}
+                            </td>
+
+                            <td>
+                                <button class="btn btn-outline-light text-dark border-0" onclick="mark_notification_as_read('{{ request.user.pk }}', '{{ n.id }}', this)" title="Done">
+                                <i class="fa-solid fa-delete-left"></i>
+                                </button>
+                            </td>
+                        </tr>
+                        {% endwith %}
                     {% endfor %}
-                </ul>
             {% else %}
                 <p>No unread notifications.</p>
             {% endif %}
@@ -32,7 +47,7 @@
 <script>
     function mark_notification_as_read(user_pk, notification_id, button) {
         $.ajax({
-            url: "http://{{ request.get_host }}/{{ user.username }}/inbox/notifications/" + notification_id + "/read/",
+            url: "http://{{ request.get_host }}/{{ user.username }}/inbox/notices/" + notification_id + "/read/",
             type: "GET",
             dataType: "json",
             success: function(response) {
