--- a/dn/templates/profile.html
+++ b/dn/templates/profile.html
@@ -22,8 +22,8 @@
                             <td style="word-break: break-all;">{{ resource.created_at }}</td>
 
                             <td style="width: 5%">
-                                <a data-toggle="tooltip" title="delete" hx-delete="{% url 'resource_delete' r_id=resource.pk pk=pk %}">
-                                <button type="button" class="btn btn-danger">delete</button>
+                                <a class="icon-link icon-link-hover "data-toggle="tooltip" hx-delete="{% url 'resource_delete' r_id=resource.pk pk=pk %}">
+                                <i class="fa-sharp fa-solid fa-trash-can" style="color: #a71b1b;"></i>
                                 </a>
                             </td>
 
@@ -32,8 +32,9 @@
                     </tbody>
                 </table>
 
-                <a class="btn btn-outline-success" data-toggle="tooltip" data-bs-placement="bottom" title="provision" href="{% url 'resource_create' pk %}" role="button">
-                add resource</a>
+                <a data-toggle="tooltip" data-bs-placement="bottom" title="provision" href="{% url 'resource_create' pk %}" role="button">
+                <i class="fa-solid fa-plus"></i>
+                </a>
 
             </div>
         </div>
