--- a/dn/templates/navbar.html
+++ b/dn/templates/navbar.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="nav navbar-nav text-nowrap flex-row mx-md-auto order-1 order-md-2">
             {% if user.is_authenticated %}
-            <a class="navbar-brand" href="{% url 'profile' %}"><strong>ambig</strong></a>
+            <a class="navbar-brand" href="{% url 'profile' %}"><strong>ambi</strong></a>
             <div class="dropdown dropleft">
                 <a class="dropdown-toggle navbar-brand" data-bs-toggle="dropdown" aria-expanded="false">
                 </a>
