--- a/dn/templates/navbar.html
+++ b/dn/templates/navbar.html
@@ -16,7 +16,7 @@
             </div>
             <div> {% include 'snippets/notify.html' %} </div>
             {% else %}
-            <a class="navbar-brand" href="{% url 'welcome' %}"><strong>ambig</strong></a>
+            <a class="navbar-brand" href="{% url 'welcome' %}"><strong>ambi</strong></a>
             {% endif %}
         </div>
     </div>
